<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="351dp"
        android:text="@string/title"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResX1"
        android:layout_width="147dp"
        android:layout_height="25dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="169dp"
        android:layout_marginBottom="166dp"
        android:text="@string/x1Linha"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvResX2"
        android:layout_width="145dp"
        android:layout_height="25dp"
        android:layout_marginStart="212dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="166dp"
        android:text="@string/x2Linha"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="144dp"
        android:layout_height="0dp"
        android:layout_marginBottom="269dp"
        android:background="#8BC34A"
        android:backgroundTint="#E91E63"
        android:text="@string/calcular"
        android:textColorLink="#E91E63"
        app:iconTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:strokeColor="#E91E63" />

    <EditText
        android:id="@+id/etValorA"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/valorA"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValorB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etValorB"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/valorB"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etValorC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorA" />

    <EditText
        android:id="@+id/etValorC"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/valorC"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorB" />

</androidx.constraintlayout.widget.ConstraintLayout>